# NeuralNetwork

./: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  TrainingData.cpp  TrainingData.h  main.cpp
